--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,7 @@
           Create Quiz!
           <span class="badge bg-danger">New!</span>
         </a>
+        <a class="nav-link ms-5 btn-warning" href="https://github.com/Tvaitilas/quiz-angular-build">Kodas Github'e</a>
       </div>
     </div>
   </div>
